--- a/data/build.gradle
+++ b/data/build.gradle
@@ -38,4 +38,20 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    implementation project(path: ':domain')
+
+    // Kotlin coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
+    implementation 'androidx.paging:paging-common-ktx:3.1.1'
+    implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
+
+    // Retrofit
+    def retrofit_ver = '2.9.0'
+    implementation "com.squareup.retrofit2:retrofit:${retrofit_ver}"
+    implementation "com.squareup.retrofit2:converter-gson:${retrofit_ver}"
+    // Serialization[Gson]
+    implementation "com.google.code.gson:gson:2.9.1"
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
 }
