--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,11 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
+    id 'kotlin-android'
+    id 'androidx.navigation.safeargs.kotlin'
+//    id 'kotlin-parcelize'
 }
 
 android {
@@ -32,6 +37,7 @@ android {
     }
     buildFeatures {
         viewBinding true
+        dataBinding true
     }
 }
 
@@ -49,4 +55,31 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    // Dagger-Hilt
+    def hilt_ver = '2.44.2'
+    implementation "com.google.dagger:hilt-android:${hilt_ver}"
+    kapt "com.google.dagger:hilt-compiler:${hilt_ver}"
+
+    // Glide
+    def glide_version = "4.14.2"
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    annotationProcessor("com.github.bumptech.glide:compiler:$glide_version")
+
+    // lifecycle
+    def lifecycle_ver = '2.6.1'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:${lifecycle_ver}"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:${lifecycle_ver}"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${lifecycle_ver}"
+
+    implementation project(path: ':domain')
+    implementation project(path: ':data')
+
+    // Retrofit
+    def retrofit_ver = '2.9.0'
+    implementation "com.squareup.retrofit2:retrofit:${retrofit_ver}"
+    implementation "com.squareup.retrofit2:converter-gson:${retrofit_ver}"
+    // Serialization[Gson]
+    implementation "com.google.code.gson:gson:2.9.1"
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
 }
