--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -28,6 +30,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    defaultConfig {
+        buildConfigField "String", "MOVIEZ_BASE_URL", getProperty("app.base.url.moviez")
+        buildConfigField "String", "API_KEY", getProperty("api.key")
+    }
 }
 
 dependencies {
@@ -38,8 +44,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
-    implementation project(path: ':domain')
 
     // Kotlin coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
@@ -54,4 +58,11 @@ dependencies {
     // Serialization[Gson]
     implementation "com.google.code.gson:gson:2.9.1"
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
+
+    // Dagger-Hilt
+    def hilt_ver = '2.44.2'
+    implementation "com.google.dagger:hilt-android:${hilt_ver}"
+    kapt "com.google.dagger:hilt-compiler:${hilt_ver}"
+
+    implementation project(path: ':domain')
 }
