--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,5 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+app.base.url.moviez="https://api.themoviedb.org/3/"
+api.key="1f45ae2ccf6a1c904421334f38feee43"
