--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,8 @@ dependencies {
     // Serialization[Gson]
     implementation "com.google.code.gson:gson:2.9.1"
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
+
+    // Paging
+    implementation 'androidx.paging:paging-common-ktx:3.1.1'
+    implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
 }
