--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,9 +81,6 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:${lifecycle_ver}"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${lifecycle_ver}"
 
-//    implementation project(path: ':domain')
-//    implementation project(path: ':data')
-
     // Retrofit
     def retrofit_ver = '2.9.0'
     implementation "com.squareup.retrofit2:retrofit:${retrofit_ver}"
@@ -95,4 +92,11 @@ dependencies {
     // Paging
     implementation 'androidx.paging:paging-common-ktx:3.1.1'
     implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
+
+    // Room
+    def room_version = "2.5.1"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
 }
