--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id 'com.google.dagger.hilt.android'
     id 'kotlin-android'
     id 'androidx.navigation.safeargs.kotlin'
-//    id 'kotlin-parcelize'
+    id 'kotlin-parcelize'
 }
 
 android {
